[package]
name = "qsniffer"
version = "0.1.0"
edition = "2024"
license = "MIT"
[dependencies]
# qexed 的库(我tm都是qexed的子项目了)
qexed_packet_macros = { path = "./qexed_packet_macros" }
qexed_tcp_connect = { path = "./qexed_tcp_connect" }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt", "net", "sync"] }
bytes = "1.11.0"
log = "0.4.28"
tklog = "0.3.0"
serde_json = "1.0.145"
uuid = "1.18.1"
