[package]
name = "qexed_tcp_connect"
version = "0.1.0"
edition = "2024"
description = "一个数据包连接工具"
license = "MIT"
# serde = { workspace = true, features = ["derive"] }
[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
async-stream = "0.3.6"
bitflags = "2.10.0"
bytes = "1.11.0"
cfb-mode = "0.8.2"
crab_nbt = "0.2.11"
ctr = "0.9.2"
dyn-clone = "1.0.20"
flate2 = "1.1.5"
futures = "0.3.31"
log = "0.4.28"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tklog = "0.3.0"
tokio = "1.48.0"
tracing = "0.1.43"
typename = "0.1.2"
uuid = "1.18.1"



