[package]
name = "qexed_tcp_connect"
version = "0.1.0"
edition = "2024"
description = "一个数据包连接工具"
license = "MIT"
# serde = { workspace = true, features = ["derive"] }
[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
crab_nbt = "0.2.11"
flate2 = "1.1.5"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.18.1"
# anyhow = "1.0.100"
# bytes = "1.11.0"
# crab_nbt = "0.2.11"
# dyn-clone = "1.0.20"
# flate2 = "1.1.5"
# log = "0.4.28"
# once_cell = "1.21.3"
# rand = "0.9.2"
# serde = "1.0.228"
# serde_json = "1.0.145"
# tklog = "0.3.0"
# tokio = "1.48.0"
# uuid = "1.18.1"



