[package]
name = "qsniffer"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Inotart/qsniffer"
exclude = [
    "target/",           # 排除整个编译目录
    "Cargo.lock",        # 对于库项目，通常排除锁文件
    "*.log",             # 排除日志文件
    "**/*.bk",           # 排除备份文件
]
[dependencies]
# qexed 的库(我tm都是qexed的子项目了)
qexed_packet_macros = { version = "0.1.0", workspace = true}
qexed_tcp_connect = {  version = "0.1.0", workspace = true }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt", "net", "sync"] }
bytes = "1.11.0"
log = "0.4.28"
tklog = "0.3.0"
serde_json = "1.0.145"
uuid = "1.18.1"
